Fix styling issues, especially with title screen horizontal alignment

--- a/learnreact/quizzical_app/src/App.css
+++ b/learnreact/quizzical_app/src/App.css
@@ -1,8 +1,3 @@
-body {
-  background-color: #FFFFFF;
-  font-family: Inter;
-}
-
 /* Center the elements on the page */
 html {
   display: flex;
@@ -14,9 +9,7 @@ html {
   padding: 0;
 }
 
-.main {
-  background: #F5F7FB;
-  width: 317px;
+main {
   border-radius: 10px;
   margin-left: 5%;
   margin-right: 5%;
@@ -32,23 +25,26 @@ html {
 }
 
 .title {
-  color: #293264;
-  font-size: 31.25;
-  font-weight: bold;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.title--header {
+  color: #293264;
+  font-size: 52px;
+  font-weight: bold;
+}
+
 .title--button {
-  width: 193px;
-  height: 52px;
-  left: 179px;
-  top: 314px;
+  min-width: 120px;
+  min-height: 60px;
+  width: 100%;
+  height: 100%;
   background-color: #4D5B9E;
   color: #F5F7FB;
-  font-size: 16px;
+  font-size: 24px;
   border-radius: 15px;
 }
 
